--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Favicon-->
+    <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <!-- CSS -->
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <h1>Ola Mundo</h1>
+
+    <main>
+
+        <section id="telefone">
+
+
+        </section>
+
+        <section id="redes-sociais">
+
+
+        </section>
+
+
+    </main>
+
     
 </body>
 </html>
