tela Home criada

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
 
         <section id="telefone">
+            <iframe src="./paginas-extras/home.html" name="tela" id="tela" frameborder="0"></iframe>
 
 
         </section>
