--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
     <main>
 
         <section id="telefone">
-            <iframe src="./paginas-extras/home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="./paginas-extras/home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador nao e compativel com isso...
+            </iframe>
 
 
         </section>
 
         <section id="redes-sociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
 
 
         </section>
