--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/default.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
@@ -23,12 +24,12 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
+            <a href="./paginas-extras/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="./paginas-extras/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="./paginas-extras/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
+            <a href="./paginas-extras/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="./paginas-extras/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="./paginas-extras/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
 
 
         </section>
