paginas twitter e facebook atualizadas

--- a/paginas-extras/facebook.html
+++ b/paginas-extras/facebook.html
@@ -11,6 +11,6 @@
 </head>
 <body>
     <img src="../imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/">ACESSE</a>
+    <a href="https://www.facebook.com/" target="_blank">ACESSE</a>
 </body>
 </html>
