--- a/paginas-extras/twitter.html
+++ b/paginas-extras/twitter.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="../imagens/tela-twitter.jpg" alt="Twitter">
-    <a href="https://twitter.com/GusstavoWw">ACESSE</a>
+    <a href="https://twitter.com/GusstavoWw" target="_blank">ACESSE</a>
 </body>
 </html>
