pagina youtube atualizada

--- a/paginas-extras/youtube.html
+++ b/paginas-extras/youtube.html
@@ -9,7 +9,7 @@
    
 </head>
 <body>
-    <img src="../imagens/tela-youtube.png" alt="Tela do youtube">
-    <a href="https://www.youtube.com/watch?v=ar5UB2MxraE" target="_blank">ACESSE</a>
+    <img src="../imagens/minha-tela-youtube.jpg" alt="Tela do youtube">
+    <a href="https://www.youtube.com/@nossew7283/videos" target="_blank">ACESSE</a>
 </body>
 </html>
